--- a/src/pages/centovacast.astro
+++ b/src/pages/centovacast.astro
@@ -12,6 +12,7 @@ import CardDescripCentovaDos from "../components/centovacast/CardDescripCentovaD
 ---
 
 <Layout title="Hosting Internet Services | Radio CentovaCast">
+
     <!-- INICIA CODIGO SECCION HEADER-->
 
     <main>
@@ -23,10 +24,10 @@ import CardDescripCentovaDos from "../components/centovacast/CardDescripCentovaD
             <div class="pt-4 lg:hidden"><MobileMenu /></div>
 
             <div
-                class="contenedor mx-auto text-center flex flex-col justify-center items-center py-10"
+                class="contenedor mx-auto text-center flex flex-col justify-center items-center px-5 py-10"
             >
                 <h1
-                    class="text-white text-6xl font-light pb-5 tracking-tighter"
+                    class="text-white text-3xl font-light pb-5 tracking-tighter md:text-5xl lg:text-6xl"
                 >
                     Conecta con el Mundo tu <br />
                     <span class="text-is-gradient">Radio Streaming CentovaCast</span>
@@ -38,10 +39,10 @@ import CardDescripCentovaDos from "../components/centovacast/CardDescripCentovaD
                     audio para sus oyentes
                 </p>
 
-                <div class="flex items-center mt-10">
+                <div class="flex flex-col items-center mt-10 md:flex-row">
                     <a
                         href="https://clientes.servistream.net/index.php?rp=/store/streaming-radio/stream-basico"
-                        class="relative inline-flex items-center justify-center p-0.5 overflow-hidden text-sm font-medium text-gray-900 rounded-lg group bg-gradient-to-br from-purple-600 to-blue-500 group-hover:from-purple-600 group-hover:to-blue-500 hover:text-white dark:text-white focus:ring-4 focus:outline-none focus:ring-blue-300 dark:focus:ring-blue-800"
+                        class="relative inline-flex items-center justify-center p-0.5 overflow-hidden text-sm font-medium text-gray-900 rounded-lg group bg-gradient-to-br from-purple-600 to-blue-500 group-hover:from-purple-600 group-hover:to-blue-500 hover:text-white dark:text-white focus:ring-4 focus:outline-none focus:ring-blue-300 dark:focus:ring-blue-800 mb-5 md:mb-0"
                     >
                         <span
                             class="relative px-5 py-2.5 transition-all ease-in duration-75 bg-white dark:bg-gray-900 rounded-md group-hover:bg-opacity-0"
@@ -57,7 +58,7 @@ import CardDescripCentovaDos from "../components/centovacast/CardDescripCentovaD
 
                 <!-- INICIO CODIGO SECCION LOGOS CLIENTES SCROLL HOSTING-->
 
-                <article class="py-10">
+                <article class="py-10 hidden md:block">
                     <section class="contenedor mx-auto">
                         <LogosScrollHosting />
                     </section>
@@ -67,8 +68,9 @@ import CardDescripCentovaDos from "../components/centovacast/CardDescripCentovaD
             </div>
         </header>
 
+                <!-- INICIO CODIGO SECCION SERVICIOS UNO-->
 
-        <section class="contenedor mx-auto grid grid-cols-3 py-10">
+        <section class="contenedor mx-auto grid grid-cols-1 py-10 md:grid-cols-2 lg:grid-cols-3">
             <CardDescripCentovaUno src="/img/SolarMusicNote2Outline.svg" title="Calidad de Sonido" content="Transmisiones de hasta 320kbps. Codificación en mp3PRO y aacPlus para mayor calidad con la misma conectividad." />
             <CardDescripCentovaUno src="/img/SolarAlignBottomOutline.svg" title="Estadísticas" content="Información sobre la actividad de tus oyentes: ubicación geográfica, cantidad de oyentes, tiempo de escucha, y mucho más." />
             <CardDescripCentovaUno src="/img/SolarMusicLibraryOutline.svg" title="HTML5 & SSL" content="Varios modelos de reproductores con tecnología SSL activa. Máxima compatibilidad con navegadores y sistemas bajo firewalls." />
@@ -76,7 +78,7 @@ import CardDescripCentovaDos from "../components/centovacast/CardDescripCentovaD
 
          <!-- INICIO CODIGO SECCION PRECIO-->
 
-         <div id="ver_precios" class="my-20 contenedor mx-auto">
+         <div id="ver_precios" class="my-20 contenedor mx-auto px-5">
             <h2 class="text-white">
                 En vivo en 3... 2... 1...
             </h2>
@@ -103,7 +105,7 @@ import CardDescripCentovaDos from "../components/centovacast/CardDescripCentovaD
 
         <!-- INICIO CODIGO SECCION DESCRIPCION DOS-->
 
-        <section class="grid grid-cols-4 contenedor mx-auto py-20 gap-3">
+        <section class="grid grid-cols-1 contenedor mx-auto py-20 gap-3 md:grid-cols-2 lg:grid-cols-4">
             <CardDescripCentovaDos title="Reproductores" content="Nuestra empresa cuenta con más de 20 reproductores gratuitos para nuestros clientes, entregamos códigos HTML listos para su sitio" />
             <CardDescripCentovaDos title="Delay Mínimo" content="Servidores estratégicamente posicionados, configurados y optimizados para obtener el menor retardo de su señal de radio" />
             <CardDescripCentovaDos title="Beneficios" content="Todos nuestros planes cuentan con tecnología AACPlus y MP3 que permiten transmitir a baja calidad y con un excelente sonido" />
