--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -42,20 +42,27 @@ import Footer from "../components/Footer.astro";
 						esté siempre activo, para que tus visitantes y motores
 						de búsqueda confíen en ti. Garantizado.
 					</p>
-					<div class="mt-10 flex flex-col lg:flex-row">
-						<a
-							class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded-lg mb-4 lg:mb-0 lg:mr-2"
+					<div class="mt-10 flex flex-col md:flex-row">
+						<div>
+							<a
+							class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 inline-block rounded-lg mb-4 lg:mb-0 md:mr-2"
 							href="/hosting-cloud"
 						>
 							Comenzar Ahora
 						</a>
-						<a
-							class="bg-transparent hover:bg-blue-500 text-white font-semibold hover:text-white py-2 px-4 border border-white hover:border-transparent rounded-lg"
+
+						</div>
+						<div>
+							<a
+							class="bg-transparent hover:bg-blue-500 text-white font-semibold inline-block hover:text-white py-2 px-4 border border-white hover:border-transparent rounded-lg"
 							href="/paginas-web"
 						>
 							Más que un sitio web
 							<i class="fa-solid fa-arrow-right ml-3"></i>
 						</a>
+						</div>
+
+
 					</div>
 				</div>
 				<div class="items-center justify-center hidden lg:flex">
