--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -302,7 +302,9 @@ import Footer from "../components/Footer.astro";
 					<img
 						class="object-cover object-center w-full h-full rounded-full"
 						src="https://cdn2.iconfinder.com/data/icons/2018-social-media-app-logos/1000/2018_social_media_popular_app_logo-whatsapp-512.png"
+						alt="Icono"
 					/>
+
 				</a>
 			</div>
 		</div>
